--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "mitt": "^3.0.0",
+    "pinia": "^2.0.30",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "swiper": "^8.4.5",
