--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vee-validate": "^4.7.3",
     "vue-axios": "^3.5.0",
     "vue-cli-plugin-pug": "^2.0.0",
+    "vue-head": "^2.2.0",
     "vue-loading-overlay": "^6.0.2"
   },
   "eslintConfig": {
