--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-standard": "^6.1.0",
+    "@vueuse/head": "^1.0.26",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.1.3",
